wip: without babel

--- a/packages/a/package.json
+++ b/packages/a/package.json
@@ -1,7 +1,7 @@
 {
   "name": "package-a",
   "version": "1.0.0",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "scripts": {
     "build": "babel --verbose --config-file ../../babel.config.js src -d lib --extensions \".ts,.tsx,.js,.jsx\" --source-maps inline"
   }
